--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
-spring.datasource.username=dbuser
-spring.datasource.password=dbpassword
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/mydatabase}
+spring.datasource.username=${DATABASE_USERNAME:dbuser}
+spring.datasource.password=${DATABASE_PASSWORD:dbpassword}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
