remove heranca no metodo de pagamento e permite atualizacao de conta paga.

--- a/src/main/resources/db/changelog/001-create-tables.yaml
+++ b/src/main/resources/db/changelog/001-create-tables.yaml
@@ -334,3 +334,12 @@ databaseChangeLog:
                   type: "varchar(255)"
                   constraints:
                     nullable: true
+  - changeSet:
+      id: 18
+      author: italo
+      changes:
+        - dropColumn:
+            tableName: "payment-method"
+            columns:
+              - column:
+                  name: dtype
