--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/mydatabase}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://192.168.0.81:5432/mydatabase}
 spring.datasource.username=${DATABASE_USERNAME:dbuser}
 spring.datasource.password=${DATABASE_PASSWORD:dbpassword}
 spring.datasource.driver-class-name=org.postgresql.Driver
