--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   database:
     image: postgres:latest
     container_name: postgres-container-dev
@@ -7,5 +8,12 @@ services:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: dbuser
       POSTGRES_PASSWORD: dbpassword
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - 5433:5432
+      - "5433:5432"
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
