--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_USER: dbuser
       POSTGRES_PASSWORD: dbpassword
       PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - /home/italo/saverdb-local:/var/lib/postgresql/data
     ports:
       - "5433:5432"
     networks:
