--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout
@@ -18,9 +21,9 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Image Name
-        run: echo "IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/meu-app" >> $GITHUB_ENV
+        run: echo "IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/saver-api" >> $GITHUB_ENV
 
-      - name: DOcker Build
+      - name: Docker Build
         run: docker build -t $IMAGE_NAME:latest .
 
       - name: Docker Push
