--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   nginx:
     image: nginx:latest
     container_name: nginx_proxy_backend
+    restart: unless-stopped
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
@@ -16,6 +17,7 @@ services:
     build:
       context: ../
       dockerfile: Dockerfile
+    restart: unless-stopped
     environment:
       DATABASE_URL: jdbc:postgresql://database:5432/mydatabase
       DATABASE_USERNAME: dbuser
@@ -30,7 +32,7 @@ services:
   database:
     image: postgres:latest
     container_name: postgres-container
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: dbuser
