--- a/src/main/resources/db/changelog/001-create-tables.yaml
+++ b/src/main/resources/db/changelog/001-create-tables.yaml
@@ -538,3 +538,47 @@ databaseChangeLog:
             tableName: "income"
             columnName: "end_date"
             columnDataType: "date"
+
+  - changeSet:
+      id: 24
+      author: "italo"
+      changes:
+        - createTable:
+            tableName: "balance"
+            columns:
+              - column:
+                  name: "id"
+                  type: "varchar(255)"
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: "balance_date"
+                  type: "date"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: "balance"
+                  type: "DECIMAL"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: "created_by_username"
+                  type: "varchar(255)"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: "updated_by_username"
+                  type: "varchar(255)"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: "created_at"
+                  type: "TIMESTAMP"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: "updated_at"
+                  type: "TIMESTAMP"
+                  constraints:
+                    nullable: false
